[package]
name = "zcash-local-net"
version = "0.1.0"
edition = "2021"

[dependencies]
# Zcash
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }

# Zebra
zebra-node-services = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.1.0", features = [ "rpc-client" ] }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.1.0", features = [ "getblocktemplate-rpcs" ] }
zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.1.0" }
testvectors = { git = "https://github.com/zancas/zingolib.git", branch = "publish_testvectors_as_crate" }

# File
tempfile = "3.13.0"

# Network
portpicker = "0.1.1"
http = "1.1.0"

# Error handling
thiserror = "1.0.64"

# Logging
tracing = "0.1.40"

# Boilerplate reduction
getset = "0.1.3"

# Parsing
json = "0.12.4"
serde_json = "1.0.132"

# Encoding
hex = "0.4.3"

# Runtime
tokio = { version = "1.25.0" }

[dev-dependencies]
# Logging
tracing-subscriber = "0.3.15"

# Runtime
tokio = "1.25.0"
